--- a/src/components/ExhibitionList/ExhibitionList.scss
+++ b/src/components/ExhibitionList/ExhibitionList.scss
@@ -1,14 +1,18 @@
 .exhibition-list {
   margin: 40px 0 40px 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 40px;
+  &__heading {
+    color: #fff;
+    text-transform: uppercase;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+  }
   &__item {
-    display: flex;
-    flex-direction: row;
-    box-shadow: 1px 1px 7px 1px rgba(0, 0, 0, 0.5);
-    width: 45%;
-    border-radius: 15px;
+    box-shadow: 0 0 10px 0 #fff;
+    border-radius: 4px;
     cursor: pointer;
     &_picture {
       width: 440px;
