--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -3,7 +3,7 @@
   &__navbar {
     display: inline-flex;
     justify-content: space-between;
-    background-color: #f0b781;
+    background-color: #4addbd;
     position: fixed;
     width: 100%;
     padding: 20px 15px;
@@ -14,8 +14,9 @@
       &_item {
         margin-right: 20px;
         a {
-          color: #000000;
+          color: #ffffff;
           text-transform: uppercase;
+          text-shadow: 1px 1px 2px black;
         }
       }
     }
@@ -27,7 +28,7 @@
 }
 
 .main {
-  width: 1440px;
+  width: 1500px;
   padding-top: 104px;
   margin: auto;
 }
